--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,6 +21,9 @@ html {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-height: 100vh;
   color: white;
 }
