fit: Style and ico

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,9 +21,7 @@ html {
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding-top: 100px;
   min-height: 100vh;
   color: white;
 }
